--- a/assets/creative/css/creative.css
+++ b/assets/creative/css/creative.css
@@ -73,7 +73,7 @@ aside {
   color: #F05F40;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
-  text-transform: uppercase;
+ /* text-transform: uppercase;*/
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
@@ -83,11 +83,11 @@ aside {
   font-weight: 700;
   font-size: 12px;
   color: #222222;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
 }
 .navbar-default .nav > li > a,
 .navbar-default .nav > li > a:focus {
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   font-weight: 700;
   font-size: 13px;
   color: #222222;
